syntax = "proto3";

message StateMessage
{
    enum State
    {
        NONE = 0;
        MANUAL = 1;
        AUTOMATIC = 2;
    }
    State state = 1;

    message Manual
    {
        enum State
        {
            NONE = 0;
            FORWARD = 1;
            BACKWARD = 2;
            LEFT = 3;
            RIGHT = 4;
            STOP = 5;
        }
        State state = 1;
    }

    Manual manual = 2;
}

message Waypoint
{
    double lat = 1;
    double lng = 2;
}

message WaypointsMessage
{
    repeated Waypoint waypoints = 1;
}